css + use primevue component + add visibility on game history + fix review game
