# server/src/routes/index.ts
@@ -107,12 +107,14 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "id": {"dataType":"double","required":true},
-            "date": {"dataType":"datetime","required":true},
+            "startDate": {"dataType":"datetime","required":true},
+            "endDate": {"dataType":"union","subSchemas":[{"dataType":"datetime"},{"dataType":"enum","enums":[null]}]},
             "room": {"ref":"ListRoomItemOutputDTO","required":true},
             "blackPlayer": {"dataType":"union","subSchemas":[{"ref":"UserRankOutputDTO"},{"dataType":"enum","enums":[null]}]},
             "whitePlayer": {"dataType":"union","subSchemas":[{"ref":"UserRankOutputDTO"},{"dataType":"enum","enums":[null]}]},
             "winner": {"dataType":"union","subSchemas":[{"ref":"UserRankOutputDTO"},{"dataType":"enum","enums":[null]}]},
             "moves": {"dataType":"union","subSchemas":[{"dataType":"array","array":{"dataType":"refObject","ref":"MoveOutputDTO"}},{"dataType":"enum","enums":[null]}]},
+            "isPublic": {"dataType":"boolean","required":true},
         },
         "additionalProperties": false,
     },
